# ocrus

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.en.md  README.ja.md  README.md
.github/workflows/: release.yml
benches/: preproc.rs
crates/ocrus-cli/: Cargo.toml
crates/ocrus-cli/src/: main.rs
crates/ocrus-cli/src/commands/: bench.rs  dataset.rs  mod.rs  recognize.rs  tui.rs
crates/ocrus-cli/src/output/: json.rs  text.rs
crates/ocrus-cli/tests/: char_accuracy.rs  generate_test_images.rs
crates/ocrus-core/: Cargo.toml
crates/ocrus-core/src/: config.rs  engine.rs  error.rs  lib.rs  stream.rs  types.rs
crates/ocrus-dataset/: Cargo.toml
crates/ocrus-dataset/src/: augment.rs  charsets.rs  font.rs  lib.rs  render.rs  writer.rs
crates/ocrus-layout/: Cargo.toml
crates/ocrus-layout/src/: ccl.rs  lib.rs  projection.rs  quality_gate.rs  ruby.rs  vertical.rs
crates/ocrus-nn/: Cargo.toml
crates/ocrus-nn/src/: arena.rs  graph.rs  lib.rs  model.rs  tensor.rs
crates/ocrus-nn/src/ops/: activation.rs  batchnorm.rs  binary.rs  conv2d.rs  gather.rs  layernorm.rs  linear.rs  math.rs  matmul.rs  mod.rs  pool.rs  reduce.rs  relu.rs  reshape.rs  tensor_ops.rs
crates/ocrus-nn/tests/: precision.rs
crates/ocrus-preproc/: Cargo.toml
crates/ocrus-preproc/src/: binarize.rs  grayscale.rs  jpeg.rs  lib.rs  normalize.rs
crates/ocrus-recognizer/: Cargo.toml
crates/ocrus-recognizer/src/: cascade.rs  charset.rs  ctc_beam.rs  ctc_greedy.rs  dict.rs  glyph_cache.rs  lib.rs  model.rs  segment.rs
crates/ocrus-runtime/: Cargo.toml
crates/ocrus-runtime/src/: backend.rs  lib.rs  ort_backend.rs
data/: jis_x_0208.txt  test_fonts.yml
data/test_chars/: fullwidth_alnum.txt  fullwidth_symbols.txt  hiragana.txt  jis_level3.txt  jis_level4.txt  katakana.txt
models/: README.md  download.py  download.sh
scripts/: pyproject.toml
scripts/src/ocrus_scripts/: __init__.py  checkpoint_to_onnx.py  convert_to_ocnn.py  export_onnx.py  finetune.py  generate_test_chars.py  quantize.py
test_results/: failures_step1.json
