[package]
name = "ocrus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ocrus"
path = "src/main.rs"

[dependencies]
ocrus-core = { workspace = true }
ocrus-preproc = { workspace = true }
ocrus-layout = { workspace = true }
ocrus-recognizer = { workspace = true }
ocrus-nn = { workspace = true }
ocrus-dataset = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
memmap2 = "0.9.10"
ndarray = { workspace = true }

[dev-dependencies]
ab_glyph = "0.2.32"
imageproc = "0.26.1"
serde = { workspace = true }
