[package]
name = "ocrus-recognizer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocrus-core = { workspace = true }
ocrus-runtime = { workspace = true }
ndarray = { workspace = true }
daachorse = "1.0.0"
img_hash = "3.2"
image = { version = "0.25.9", default-features = false }
